copy stuff from example code from class and add TODO's